@@ -34,8 +34,7 @@ module Spree
 
       if mollie_payment_method && params['id']
         begin
-          mollie = Mollie::Client.new
-          mollie.setApiKey mollie_payment_method.preferred_api_key
+          mollie = Mollie::Client.new(mollie_payment_method.preferred_api_key)
           mollie_payment = mollie.payments.get params['id']
 
           if mollie_payment
